# renzmann.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  all-posts.org  bootstrap.sh  build.el  config.toml  go.mod  go.sum  index.html  index.json  index.xml  robots.txt  sitemap.xml
.github/workflows/: publish.yml
_layouts/: default.html
archetypes/: default.md
assets/css/: styles.css
categories/: index.html  index.xml
categories/data/: index.html  index.xml
categories/emacs/: index.html  index.xml
categories/org-mode/: index.html  index.xml
categories/python/: index.html  index.xml
categories/science/: index.html  index.xml
config/_default/: config.toml  languages.en.toml  menus.en.toml  (+1 more)
content/: _index.md  emacsd.md  index.org
content/posts/006_emacs_2_python/: .dir-locals.el  .gitignore  errors.py  hello.py  hello_error.py  index.org  pyproject.toml
emacsd/: index.html
js/: main.bundle.min.5bc38e31d653e1d4c39d0d9d31c4228579a79d3c9388d8b788215b7fe6b26e58c10914ff12daf2e59631d86542fabede2bbcc9da6792b5edea31f9abed644c10.js  main.bundle.min.7f87078c7ae70d0d31bda6cc767aa21c8bd11a951a80225366dfcc842251d9a837d792488bd94cd976ced7bff1c4e659f285c1649f49119622f35076775e7726.js  main.bundle.min.d7d952fbb69589ecf9390cb9ba98d08e09534f1cbe0aa285132ed0a2a14de5185a184c5b0583f11d12204799f5fcaec6326536421d513d01c020494639138ab0.js  main.bundle.min.e90775285c3115986de1f7e04e1fd394c97d731ec5a82d603cf9602ec7a971762e58c222e438b14c479f2379ecb45df8ed39f997211edded001402401926ad48.js
posts/: index.html  index.xml
static/: bootstrap.sh
tags/: index.html  index.xml
(+71 files in other folders)
