[tool.poetry]
name = "006_emacs_2_python"
version = "0.1.0"
description = ""
authors = ["Robb Enzmann <robbenzmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.971"
requests = "^2.28.1"
pyright = "^1.1.267"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
